NIFI-3291: - Fixing overflow calculation to determine if scrollbars are necessary. - Fixing styles with jquery ui slider usage.

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/common-ui.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/common-ui.css
@@ -633,3 +633,9 @@ md-progress-linear > div {
     background: #D4E0E5 !important;
     border: 1px solid #999999;
 }
+
+/* jquery ui slider override */
+
+.ui-slider-handle.ui-state-active {
+    background: #fff !important;
+}
